# FasterApi

./: .gitignore  README  README.md  TODO.md  callbacks.py  config.py  fastApiCli.py  fasterApi.py  pyproject.toml  requirements.txt  utils.py
scripts/: install.bat  install.sh  uninstall.bat  uninstall.sh
src/fastfastapi/: error_handling_typer.py  fastFastApi.py  utils.py
templates/base/: crud.tpl  model.tpl  router.tpl  schema.tpl  test_crud.tpl  test_router.tpl  test_utils.tpl
templates/item/: crud.tpl  model.tpl  router.tpl  schema.tpl  test_crud.tpl  test_router.tpl  test_utils.tpl
