[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "fastfastapi"
version = "0.0.1"
authors = [
  { name="Elio Palomba", email="elio.palomba.dev@gmail.com" },
]
mantainers = [
  { name="Elio Palomba", email="elio.palomba.dev@gmail.com" },
]
description = "This is a open-source project to speed up fastapi API development."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/HElium-IT/fastFastApi"
"Bug Tracker" = "https://github.com/HElium-IT/fastFastApi/issues"